minor filename error

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <small>Built with ❤️ for the best family trip ever.</small>
     </footer>
     
+    <!-- This line is crucial. It tells the page where to find the engine. -->
     <script src="script.js"></script>
 </body>
 </html>
